@@ -11,6 +11,7 @@ import com.artdevs.domain.entities.user.Picture;
 import com.artdevs.domain.entities.user.User;
 import com.artdevs.dto.UserRegisterDTO;
 import com.artdevs.dto.CustomDTO.UserGetRelationDTO;
+import com.artdevs.dto.post.UserPostDTO;
 import com.artdevs.dto.user.MentorDTO;
 import com.artdevs.dto.user.UserDTO;
 import com.artdevs.repositories.user.SkillRepository;
@@ -25,7 +26,6 @@ public class UserMapper {
 
 	public static UserDTO UserConvertToUserDTO(User user) {
 		UserDTO userDTO = modelMapper.map(user, UserDTO.class);
-
 		userDTO.setListDemandOfUser(getDemand(user));
 		userDTO.setBackgroundImageUrl(getAvatar(user, false));
 		userDTO.setProfileImageUrl(getAvatar(user, true));
@@ -92,46 +92,20 @@ public class UserMapper {
 	// return listSkill;
 	// }
 
-//	public static final String getAvatar(User user, boolean positon) {
-//		// System.out.println(user.getUserId());
-//		List<Picture> listPic = !user.getUserPicture().isEmpty() ?user.getUserPicture().stream()
-//				.sorted((o1, o2) -> o2.getTime().compareTo(o1.getTime()))
-//				.filter(t -> t.isPositionOfPicture() == positon).toList():null;
-//		return listPic!=null  ? listPic.get(0).getImageUrl() : null;
-//	}
-	public static final String getAvatar(User user, boolean position) {
-	    // Check if user is null or user's picture list is null
-	    if (user == null || user.getUserPicture() == null) {
-	        return null;  // Handle case where user or picture list is null
-	    }
-
-	    List<Picture> listPic = user.getUserPicture();
-
-	    // Sort pictures by time in descending order (newest first)
-	    listPic = listPic.stream()
-	        .sorted((o1, o2) -> o2.getTime().compareTo(o1.getTime()))
-	        .collect(Collectors.toList());
-
-	    // Filter pictures based on position
-	    List<Picture> filteredList = listPic.stream()
-	        .filter(picture -> picture.isPositionOfPicture() == position)
-	        .collect(Collectors.toList());
-
-	    // Check if any pictures match the position filter
-	    if (filteredList.isEmpty()) {
-	        return null;  // Handle case where no picture matches the position
-	    }
-
-	    // Return the image URL of the first picture (newest)
-	    return filteredList.get(0).getImageUrl();
+	public static final String getAvatar(User user, boolean positon) {
+		List<Picture> listPic = !user.getUserPicture().isEmpty()
+				? user.getUserPicture().stream().sorted((o1, o2) -> o2.getTime().compareTo(o1.getTime()))
+						.filter(t -> t.isPositionOfPicture() == positon).toList()
+				: null;
+		return listPic != null ? listPic.get(0).getImageUrl() : null;
 	}
-	 public static UserGetRelationDTO UserConvertToUserGetDTO (User user) {
-		 
-		 
-		 UserGetRelationDTO result = modelMapper.map(user, UserGetRelationDTO.class);
-		 result.setProfilePicUrl(getAvatar(user,true));
-		 result.setFullname(user.getFirstName()+" " + user.getMiddleName() + " " + user.getLastName());
-		 return result;
-	 }
-	 
+
+	public static UserGetRelationDTO UserConvertToUserGetDTO(User user) {
+
+		UserGetRelationDTO result = modelMapper.map(user, UserGetRelationDTO.class);
+		result.setProfilePicUrl(getAvatar(user, true));
+		result.setFullname(user.getFirstName() + " " + user.getMiddleName() + " " + user.getLastName());
+		return result;
+	}
+
 }
